<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cv_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:elevation="5dp"
                android:src="@drawable/user"
                app:civ_border_color="@color/LightGrey"
                app:civ_border_width="1dp"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/tv_sport_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_golf_course_black_24dp"
                        android:drawableLeft="@drawable/ic_golf_course_black_24dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/swimming_competition"
                        android:textSize="16sp"
                        tools:targetApi="jelly_bean" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_Trainer_Achivements_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:drawableStart="@drawable/ic_account_circle_black_24dp"
                    android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/dinesh_misar"
                    android:textSize="16sp"
                    tools:targetApi="jelly_bean" />

                <TextView
                    android:id="@+id/tv_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:drawableStart="@drawable/ic_level"
                    android:drawableLeft="@drawable/ic_level"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/inter_school_level"
                    android:textStyle="normal"
                    tools:targetApi="jelly_bean" />

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:drawableStart="@drawable/ic_cal"
                    android:drawableLeft="@drawable/ic_cal"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/year_2019_2020"
                    android:textStyle="normal"
                    tools:targetApi="jelly_bean" />

                <TextView
                    android:id="@+id/tv_what_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:drawableStart="@drawable/ic_new_releases_black_24dp"
                    android:drawableLeft="@drawable/ic_new_releases_black_24dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="What next ?"
                    android:textStyle="normal"
                    tools:targetApi="jelly_bean" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/rank"
                tools:targetApi="jelly_bean" />

            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/round_shap"
                android:elevation="5dp"
                tools:targetApi="lollipop">

                <TextView
                    android:id="@+id/tv_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:text="@string/_01"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>