<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:elevation="5dp"
            android:src="@drawable/user"
            android:visibility="gone"
            app:civ_border_color="@color/appDarkOrange"
            app:civ_border_width="1dp"
            tools:targetApi="lollipop" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Who you are ?"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textSize="25sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/LightGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/i_am"
            android:textColor="@color/appTextColor"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:targetApi="jelly_bean" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:baselineAligned="false"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/ll_trainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/trainer"
                    tools:targetApi="jelly_bean" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:elevation="5dp"
                    android:src="@drawable/coach"
                    tools:targetApi="lollipop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_School"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/school"
                    tools:targetApi="jelly_bean" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:elevation="5dp"
                    android:src="@drawable/school"
                    tools:targetApi="lollipop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Parents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/parents"

                    tools:targetApi="jelly_bean" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:elevation="5dp"
                    android:src="@drawable/parents"
                    tools:targetApi="lollipop" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>